# scum-and-villainy

./: .gitignore  Dockerfile  README.md  keepalive.py  main.py  pyproject.toml  supervisord.conf
.github/workflows/: deploy.yml
k8s/: deployment.yaml  kustomization.yaml
src/: actions.py  char_tools.py  helpers.py  log.py  resistances.py  set.py  start_actions.py  start_resistances.py  uses_dice.py
src/actions/: action.py  attune.py  command.py  consort.py  doctor.py  hack.py  helm.py  rig.py  scramble.py  scrap.py  skulk.py  study.py  sway.py
src/gamedata/: actions.json  resistances.json  server_template.json
src/models/: firestore.py  user.py
src/models/char/: armor.py  character.py  from_raw.py  harm.py  insight.py  prowess.py  resolve.py
src/repositories/: character_repository.py  google_sheets.py  user_repository.py
src/resistances/: insight.py  prowess.py  resistance.py  resolve.py
